web/book/tests/snapshots/snapshot__queries__variables__0.snap
---
source: web/book/tests/snapshot.rs
expression: "let top_50 = (\n  from employees\n  sort salary\n  take 50\n  aggregate [total_salary = sum salary]\n)\n\nfrom top_50      # Starts a new pipeline\n"
---
WITH table_1 AS (
  SELECT
    salary
  FROM
    employees
  ORDER BY
    salary NULLS LAST
  LIMIT
    50
), top_50 AS (
  SELECT
    SUM(salary) AS total_salary
  FROM
    table_1 AS table_0
)
SELECT
  total_salary
FROM
  top_50

