web/book/tests/snapshots/snapshot__queries__variables__2.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\nsort salary\ntake 50\naggregate [total_salary = sum salary]\ninto top_50\n\nfrom top_50      # Starts a new pipeline\n"
---
WITH table_1 AS (
  SELECT
    salary
  FROM
    employees
  ORDER BY
    salary
  LIMIT
    50
), top_50 AS (
  SELECT
    SUM(salary) AS total_salary
  FROM
    table_1 AS table_0
)
SELECT
  total_salary
FROM
  top_50

